fix scrolling issue on iOS + new build

--- a/src/components/Modals/Modal.css
+++ b/src/components/Modals/Modal.css
@@ -202,6 +202,7 @@ section.page-two {
 
   .modal-main {
     position: fixed;
+    -webkit-overflow-scrolling: touch;
     width: 100%;
     height: 100%;
     overflow-y: auto;
